--- a/pie/app/src/selection/selection.html
+++ b/pie/app/src/selection/selection.html
@@ -67,7 +67,7 @@
                     <md-autocomplete md-search-text="ctrl.query"
                                      md-items="item in ctrl.search(ctrl.query)"
                                      md-item-text="item.display"
-                    placeholder="Add selection refinements!">
+                                     placeholder="Add selection refinements!">
                         <md-item-template>
                             <div class="search-result"
                                  ng-class="{'in-selection':item.originalCat[1],'not-in-selection':!item.originalCat[1]}">
@@ -175,41 +175,54 @@
 
             <!--Prediction-->
             <div ng-if="ctrl.predictionMode">
-                <h2>Selection Topic Coverage -
-                    {{ctrl.prediction.topic_coverage_rate * 100}}%</h2>
-                <md-whiteframe class="md-whiteframe-2dp">
-                    <div>
-                        <md-chips ng-model="ctrl.prediction.topic_coverage" md-removable="false" readonly="true">
-                            <md-chip-template coverage-chip>
-                                <div class="coverage-category-chip">{{$chip[0] }}
-                                </div>
+                <div layout="row">
+                    <div layout="column">
+                        <h2>Selection Topic Coverage -
+                            {{ctrl.prediction.topic_coverage_rate * 100}}%</h2>
+                        <md-whiteframe class="md-whiteframe-2dp">
+                            <div>
+                                <md-chips ng-model="ctrl.prediction.topic_coverage" md-removable="false"
+                                          readonly="true">
+                                    <md-chip-template coverage-chip>
+                                        <div class="coverage-category-chip">{{$chip[0] }}
+                                        </div>
 
-                            </md-chip-template>
-                        </md-chips>
+                                    </md-chip-template>
+                                </md-chips>
+                            </div>
+                        </md-whiteframe>
+                        <h2>Selection Variance - {{ ctrl.prediction.selection_variance.toFixed(2)}}</h2>
                     </div>
-                </md-whiteframe>
-                <h2>Random Selection Topic Coverage -
-                    {{ctrl.prediction.random_topic_coverage_rate * 100}}%</h2>
-                <md-whiteframe class="md-whiteframe-2dp">
-                    <div>
-                        <md-chips ng-model="ctrl.prediction.random_topic_coverage" md-removable="false" readonly="true">
-                            <md-chip-template coverage-chip>
-                                <div class="coverage-category-chip">{{$chip[0] }}
-                                </div>
+                    <div layout="column" class="random-column">
+                        <h2>Random Selection Topic Coverage -
+                            {{ctrl.prediction.random_topic_coverage_rate * 100}}%</h2>
+                        <md-whiteframe class="md-whiteframe-2dp">
+                            <div>
+                                <md-chips ng-model="ctrl.prediction.random_topic_coverage" md-removable="false"
+                                          readonly="true">
+                                    <md-chip-template coverage-chip>
+                                        <div class="coverage-category-chip">{{$chip[0] }}
+                                        </div>
 
-                            </md-chip-template>
-                        </md-chips>
+                                    </md-chip-template>
+                                </md-chips>
+                            </div>
+                        </md-whiteframe>
+                        <h2>Random Variance - {{ctrl.prediction.random_variance.toFixed(2)}}</h2>
                     </div>
-                </md-whiteframe>
+                </div>
+
+                <h2 align="center">Total Variance - {{ctrl.prediction.total_variance.toFixed(2)}}</h2>
                 <h2>Rating Distribution</h2>
+
                 <canvas id="line" class="chart chart-line"
                         chart-data="[ctrl.prediction.selection_dist,ctrl.prediction.total_dist,ctrl.prediction.random_dist]"
                         chart-labels="ctrl.predictionLabels" chart-series="['Selection','All Users','Random Selection']"
                         chart-options="{legend:{display:true}}">
                 </canvas>
-                <h2>Selection Variance - {{ctrl.prediction.selection_variance}}</h2>
-                <h2>Random Variance - {{ctrl.prediction.random_variance}}</h2>
-                <h2>Total Variance - {{ctrl.prediction.total_variance}}</h2>
+
+
+
             </div>
         </div>
         <!--</md-whiteframe>-->
