--added more data -- fixed some UI issues

--- a/pie/app/src/selection/selection.html
+++ b/pie/app/src/selection/selection.html
@@ -1,7 +1,7 @@
 <div layout="column">
     <div layout="row">
         <h1>{{ctrl.restName}}</h1>
-        <md-whiteframe class="md-whiteframe-2dp header-container">
+        <md-whiteframe class="md-whiteframe-2dp switch-button-container">
 
                 <md-button class="md-primary md-hue-1 switch-button" ng-click="ctrl.togglePrediction()">
                     <span ng-if="!ctrl.predictionMode">Get Prediction!</span>
