added poi search

--- a/pie/app/index.html
+++ b/pie/app/index.html
@@ -75,6 +75,7 @@
 <script src="./src/poi/poi.js"></script>
 <script src="./src/poi/poi.service.js"></script>
 <script src="./src/poi/poi.controller.js"></script>
+<script src="./src/poi/poi.filter.js"></script>
 <link rel="stylesheet" href="./src/poi/poi.css"/>
 
 <script src="./src/selection/selection.js"></script>
