--- a/pie/app/src/selection/selection.html
+++ b/pie/app/src/selection/selection.html
@@ -196,7 +196,7 @@
                         <h2>Selection Variance - {{ ctrl.prediction.selection_variance.toFixed(2)}}</h2>
                     </div>
                     <div layout="column" class="random-column">
-                        <h2>Random Selection Topic Coverage -
+                        <h2>Random Topic Coverage -
                             {{(ctrl.prediction.random_topic_coverage_rate * 100).toFixed(2)}}%</h2>
                         <md-whiteframe class="md-whiteframe-2dp">
                             <div>
