--- a/pie/app/src/poi/poi.html
+++ b/pie/app/src/poi/poi.html
@@ -1,25 +1,32 @@
-<div layout="row" class="wrapper" layout-padding layout-wrap layout-fill>
+<div layout="column">
+    <md-input-container class="md-block" flex-gt-sm>
+        <label>Search Query</label>
+        <input ng-model="query">
+    </md-input-container>
+    <div layout="row" class="wrapper" layout-padding layout-wrap layout-fill>
 
-    <md-card ng-repeat="poi in ctrl.pois">
-        <md-card-title>
-            <md-card-title-text>
-                <span class="poi-title">{{poi.name}}</span>
-                <span class="poi-subtitle">{{poi.rating}} out of 5</span>
-                <span class="poi-subtitle">{{poi.cuisines.slice(0,6).join(', ')}}</span>
-            </md-card-title-text>
 
-            <md-card-title-media>
-                <div class="card-media">
-                    <img class="poi-img" src="{{poi.img}}"/>
-                </div>
-            </md-card-title-media>
-        </md-card-title>
+        <md-card ng-repeat="poi in ctrl.pois | poi:query">
+            <md-card-title>
+                <md-card-title-text>
+                    <span class="poi-title">{{poi.name}}</span>
+                    <span class="poi-subtitle">{{poi.rating}} out of 5</span>
+                    <span class="poi-subtitle">{{poi.cuisines.slice(0,6).join(', ')}}</span>
+                </md-card-title-text>
 
-        <md-card-actions layout="row" layout-align="end center" class="layout-align-end-center layout-row">
-            <md-button class="md-icon-button" ng-click="ctrl.gotoPoi(poi.name)">
-                <md-icon md-svg-icon="share"></md-icon>
-            </md-button>
-        </md-card-actions>
+                <md-card-title-media>
+                    <div class="card-media">
+                        <img class="poi-img" src="{{poi.img}}"/>
+                    </div>
+                </md-card-title-media>
+            </md-card-title>
 
-    </md-card>
+            <md-card-actions layout="row" layout-align="end center" class="layout-align-end-center layout-row">
+                <md-button class="md-icon-button" ng-click="ctrl.gotoPoi(poi.name)">
+                    <md-icon md-svg-icon="share"></md-icon>
+                </md-button>
+            </md-card-actions>
+
+        </md-card>
+    </div>
 </div>
