final changes before cikm

--- a/pie/app/src/poi/poi.html
+++ b/pie/app/src/poi/poi.html
@@ -22,7 +22,7 @@
             </md-card-title>
 
             <md-card-actions layout="row" layout-align="end center" class="layout-align-end-center layout-row">
-                <md-button class="md-icon-button" ng-click="ctrl.gotoPoi(poi.name)">
+                <md-button class="md-icon-button" ng-click="ctrl.gotoPoi(poi)">
                     <md-icon md-svg-icon="share"></md-icon>
                 </md-button>
             </md-card-actions>
